main 풀 스크린 화면 구현 / 구글 번역 API 추가
-main 풀 스크린 화면 구현
-구글 번역 API 추가
-헤더 부분 반응형 오류 수정

--- a/main/css/index-mobile.css
+++ b/main/css/index-mobile.css
@@ -14,20 +14,19 @@
 }
 
 /* header 좌측 로고 */
+
+.logo a img {
+  width: 152.57px;
+  height: 58px;
+}
+
 .logo {
+  height: 90px;
   display: flex;
   position: absolute;
   left: 0;
   top: 16px;
 }
-.logo a {
-  width: 152.57px;
-  height: 58px;
-}
-.logo a img {
-  width: 100%;
-}
-
 /* nav */
 .header_nav {
   display: none;
@@ -46,21 +45,16 @@
 .header_ui .between {
   display: none;
 }
-.hd_lang {
+.lang {
   display: none;
 }
 
 .m_btn a {
-  width: 18px;
-  height: 18px;
   display: flex;
   align-items: center;
   position: absolute;
   top: 42px;
   right: 21px;
-}
-.m_btn a img {
-  width: 100%;
 }
 
 /* site-map */
@@ -261,16 +255,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
 }
 
 .about .main_btn > a {
   color: var(--sub);
-}
-.about .main_btn:hover {
-  color: var(--sub);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
 }
 
 /* product */
@@ -347,11 +335,6 @@
 .main_btn > a {
   color: var(--sub);
 }
-.product .main_btn:hover {
-  color: var(--sub);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
-}
 
 /* Ethical management */
 .ethic {
@@ -404,11 +387,7 @@
 .ethic .main-btn > a {
   color: var(--sub);
 }
-.ethic .main-btn:hover {
-  color: var(--sub);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
-}
+
 /* Innovative Drug development */
 
 .develop {
@@ -419,7 +398,7 @@
   margin: 0 auto;
 }
 .develop-box {
-  background-image: url(../images/development.jpg);
+  background-image: url(..//images/development.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -456,10 +435,7 @@
 .develop-box .main-btn > a {
   color: #fff;
 }
-.develop-box .main-btn:hover {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
-}
+
 /* news */
 
 .news {
@@ -478,7 +454,7 @@
 .news-img {
   width: 280px;
   height: 240px;
-  background-image: url(../images/news.jpg);
+  background-image: url(/main/images/news.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -515,11 +491,6 @@
 .text-box .main-btn > a {
   color: var(--sub);
 }
-.text-box .main-btn:hover {
-  color: var(--sub);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
-}
 
 /* recruit */
 
@@ -539,7 +510,7 @@
 .recruit-img {
   width: 280px;
   height: 240px;
-  background-image: url(../images/with.jpg);
+  background-image: url(/main/images/with.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -571,14 +542,8 @@
   justify-content: center;
 }
 
-.recruit .text-box .main-btn > a {
+.text-box .main-btn > a {
   color: var(--sub);
-}
-
-.recruit .main_btn:hover {
-  color: var(--sub);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
-  transition: all ease 0.2s;
 }
 
 /* footer */
