--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -36,6 +36,17 @@ html {
 .header:hover .mall a {
   color: var(--main);
 }
+.header:hover .goog-te-combo {
+  width: 100px;
+  color: #000;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid #000;
+  outline: none;
+}
 
 /* header 좌측 로고 */
 
@@ -43,7 +54,7 @@ html {
   display: flex;
   align-items: center;
   justify-items: center;
-  margin-right: 50px;
+  /* margin: 0 50px; */
 }
 
 .logo a {
@@ -59,12 +70,16 @@ html {
 
 nav {
   height: 90px;
+  margin: 0 60px;
 }
 
 nav > ul {
   font-size: 16px;
 }
 
+.header_nav {
+  /* border: 2px solid salmon; */
+}
 .dep1_ul {
   height: 100%;
   display: flex;
@@ -124,19 +139,18 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
-  /* height: 90px; */
+  width: 540px;
+  height: 90px;
   display: flex;
   align-items: center;
-  /* border: 2px solid red;/ */
-  gap: 10px;
-  /* margin-left: 60px; */
+  gap: 15px;
+  /* border: 1px solid red; */
 }
 
 .mall {
   display: flex;
   align-items: center;
   width: 360px;
-  /* border: 1px solid darkcyan; */
   gap: 10px;
 }
 .mall .mall_img {
@@ -148,13 +162,15 @@ nav > ul {
 }
 .mall > a {
   color: var(--main);
-  margin-right: 20px;
 }
+/* language */
 
-.img_lang a {
+.img_lang {
   width: 20px;
   height: 20px;
+  margin-left: 20px;
 }
+
 .hd_lang {
   display: flex;
   align-items: center;
@@ -162,7 +178,57 @@ nav > ul {
   height: 100%;
   width: 100%;
 }
+/* 구글 번역 api 커스텀 */
+.goog-te-gadget {
+  width: 130px;
+  height: 46px;
+  /* outline: 2px solid #fff; */
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 5px;
+  overflow: hidden;
+}
 
+/* 구글 번역 선택박스 */
+.goog-te-gadget-simple {
+  display: flex;
+  gap: 20px;
+  /* border: 1px solid #333; */
+}
+/* 언어 선택 박스 */
+.goog-te-combo {
+  width: 100px;
+  color: #fff;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  outline: none;
+}
+.goog-te-gadget .VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  display: none;
+}
+
+.goog-te-gadget,
+.goog-te-gadget-simple {
+  border-style: none !important;
+}
+.goog-te-gadget-simple img {
+  display: none;
+}
+.goog-te-menu-value span:nth-of-type(1) {
+  margin-right: 1rem;
+}
+.goog-te-menu-value span[style^="border"] {
+  display: none;
+}
+
+.m_btn {
+  width: 18px;
+  height: 18px;
+}
 .m_btn a {
   display: flex;
   align-items: center;
@@ -528,7 +594,7 @@ nav > ul {
 .develop .develop_bg {
   width: 100%;
   height: 636px;
-  background-image: url(..//images/development.jpg);
+  background-image: url(../images/development.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -582,7 +648,7 @@ nav > ul {
 .news .container {
   width: 1920px;
   height: 547px;
-  background-image: url(../main/images/news-full.png);
+  background-image: url(../images/news-full.png);
   background-position: center center;
   background-size: cover;
 }
@@ -632,43 +698,34 @@ nav > ul {
   height: 100vh;
   padding: 100px 0;
 }
-
-.recruit-box {
-  display: flex;
-  margin: 0 auto;
-  width: 1520px;
-}
-
-.recruit-img {
-  width: 900px;
+.recruit .container {
+  width: 1920px;
   height: 560px;
-  /* background-color: #000; */
-  background-image: url(../main/images/with.jpg);
+  background-image: url(../images/with.png);
   background-position: center center;
   background-size: cover;
 }
-.recruit-img img {
-  width: 100%;
+.recruit-box {
+  margin: 0 auto;
+  width: 1520px;
+  height: 560px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .recruit .text-box {
   width: 620px;
-  position: relative;
+  height: 350px;
 }
 
 .recruit .text-box > h1 {
   font-size: 40px;
   font-weight: 700;
-  position: absolute;
-  top: 94px;
-  left: 0;
 }
 .recruit .text-box p {
   font-size: 24px;
   font-weight: 500;
-  position: absolute;
-  top: 250px;
-  left: 0;
   margin-top: 10px;
 }
 
@@ -678,9 +735,6 @@ nav > ul {
   padding: 10px 20px;
   width: 160px;
   height: 60px;
-  position: absolute;
-  bottom: 92px;
-  left: 0;
 }
 
 .text-box .main-btn > a {
@@ -689,11 +743,12 @@ nav > ul {
 
 /* footer */
 .footer {
+  width: 100%;
   height: 220px;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #ccc;
-  visibility: hidden;/
+  visibility: hidden;
 }
 
 /* footer 의 왼쪽 영역 */
