--- a/about/css/about-pc.css
+++ b/about/css/about-pc.css
@@ -4,31 +4,56 @@
   height: 90px;
   display: flex;
   justify-content: space-between;
-  padding: 0 40px;
+  padding: 0 50px;
   z-index: 1;
+  background-color: #fff;
 }
 
 .header a {
   color: #000;
 }
+.header .between {
+  color: #000;
+}
+
+.header:hover .mall a {
+  color: var(--main);
+}
+.headerb .goog-te-combo {
+  width: 100px;
+  color: #000;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid #000;
+  outline: none;
+}
 
 /* header 좌측 로고 */
 
-.logo a img {
-  width: 231px;
-  height: 90px;
-}
-
-.logo {
-  height: 90px;
+.header .logo {
   display: flex;
   align-items: center;
+  justify-items: center;
+  /* margin: 0 50px; */
+}
+
+.logo a {
+  width: 120px;
+  height: 22px;
+}
+
+.logo a > img {
+  width: 100%;
 }
 
 /* header 중앙 GNB */
 
 nav {
   height: 90px;
+  margin: 0 60px;
 }
 
 nav > ul {
@@ -65,6 +90,10 @@ nav > ul {
   width: 80px;
 }
 
+.dep1_li:hover .header {
+  background-color: #fff;
+}
+
 .dep2_ul {
   max-height: 0;
   overflow: hidden;
@@ -90,34 +119,97 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
+  width: 540px;
   height: 90px;
   display: flex;
   align-items: center;
-  position: relative;
+  gap: 15px;
+  /* border: 1px solid red; */
 }
 
 .mall {
   display: flex;
   align-items: center;
+  width: 360px;
+  gap: 10px;
 }
-
-.mall > a {
-  color: var(--main);
-  margin-right: 20px;
+.mall .mall_img {
+  width: 28px;
+  height: 28px;
 }
-.lang {
-  height: 100%;
-}
-
-.lang a {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 50px;
-  height: 100%;
+.mall .mall_img img {
   width: 100%;
 }
+.mall > a {
+  color: var(--main);
+}
+/* language */
 
+.img_lang {
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+}
+
+.hd_lang {
+  display: flex;
+  align-items: center;
+  margin-right: 45px;
+  height: 100%;
+  width: 100%;
+  /* border: 1px solid red;
+  background-color: darksalmon; */
+}
+/* 구글 번역 api 커스텀 */
+.goog-te-gadget {
+  width: 130px;
+  height: 46px;
+  outline: 2px solid #fff;
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+/* 구글 번역 선택박스 */
+.goog-te-gadget-simple {
+  display: flex;
+  gap: 20px;
+  /* border: 1px solid #333; */
+}
+/* 언어 선택 박스 */
+.goog-te-combo {
+  width: 100px;
+  color: #000;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
+}
+.goog-te-gadget .VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  display: none;
+}
+
+.goog-te-gadget,
+.goog-te-gadget-simple {
+  border-style: none !important;
+}
+.goog-te-gadget-simple img {
+  display: none;
+}
+.goog-te-menu-value span:nth-of-type(1) {
+  margin-right: 1rem;
+}
+.goog-te-menu-value span[style^="border"] {
+  display: none;
+}
+
+.m_btn {
+  width: 18px;
+  height: 18px;
+}
 .m_btn a {
   display: flex;
   align-items: center;
@@ -154,7 +246,7 @@ nav > ul {
 }
 
 .site_map_logo {
-  width: 25%;
+  width: 20%;
 }
 
 .site_map_header_ui {
@@ -165,7 +257,7 @@ nav > ul {
   width: 80%;
 }
 .site_map_close_btn a img {
-  width: 10%;
+  width: 5%;
 }
 
 /* site_map 하단 */
@@ -182,13 +274,14 @@ nav > ul {
 }
 
 .site_map_dep1_li {
+  /* border: 1px solid red; */
   width: 30%;
   position: relative;
   padding-bottom: 10em;
 }
 
 .site_map_dep1_li > a {
-  font-size: 30px;
+  font-size: 28px;
   color: #000;
 }
 
@@ -199,11 +292,12 @@ nav > ul {
 .site_map_dep2_li {
   line-height: 2rem;
   margin-top: 20px;
+  /* border: 1px solid seagreen; */
 }
 
 .site_map_dep2_li > a {
   font-size: 22px;
-  color: #444;
+  color: var(--sub);
 }
 .site_map_dep2_li > a:hover {
   background-color: #029cc32b;
@@ -271,7 +365,7 @@ nav > ul {
 .intro-box .intro-img {
   height: 500px;
   width: 100%;
-  background-image: url(/about/images/about1.jpg);
+  background-image: url(../images/about1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -305,7 +399,7 @@ nav > ul {
 .vision1 .vision-img {
   height: 810px;
   width: 100%;
-  background-image: url(/about/images/vision1.jpg);
+  background-image: url(../images/vision1.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -367,7 +461,7 @@ nav > ul {
 .vision2 .vision-img2 {
   width: 900px;
   height: 810px;
-  background-image: url(/about/images/vision2.jpg);
+  background-image: url(../images/vision2.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -423,7 +517,7 @@ nav > ul {
 .vision3 .vision-img {
   width: 100%;
   height: 810px;
-  background-image: url(/about/images/vision3.jpg);
+  background-image: url(../images/vision3.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
