--- a/product/css/product-pc.css
+++ b/product/css/product-pc.css
@@ -4,31 +4,56 @@
   height: 90px;
   display: flex;
   justify-content: space-between;
-  padding: 0 40px;
+  padding: 0 50px;
   z-index: 1;
+  background-color: #fff;
 }
 
 .header a {
   color: #000;
 }
+.header .between {
+  color: #000;
+}
+
+.header:hover .mall a {
+  color: var(--main);
+}
+.headerb .goog-te-combo {
+  width: 100px;
+  color: #000;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid #000;
+  outline: none;
+}
 
 /* header 좌측 로고 */
 
-.logo a img {
-  width: 231px;
-  height: 90px;
-}
-
-.logo {
-  height: 90px;
+.header .logo {
   display: flex;
   align-items: center;
+  justify-items: center;
+  /* margin: 0 50px; */
+}
+
+.logo a {
+  width: 120px;
+  height: 22px;
+}
+
+.logo a > img {
+  width: 100%;
 }
 
 /* header 중앙 GNB */
 
 nav {
   height: 90px;
+  margin: 0 60px;
 }
 
 nav > ul {
@@ -65,6 +90,10 @@ nav > ul {
   width: 80px;
 }
 
+.dep1_li:hover .header {
+  background-color: #fff;
+}
+
 .dep2_ul {
   max-height: 0;
   overflow: hidden;
@@ -90,38 +119,102 @@ nav > ul {
 /* header 우측 ui */
 
 .header_ui {
+  width: 540px;
   height: 90px;
   display: flex;
   align-items: center;
-  position: relative;
+  gap: 15px;
+  /* border: 1px solid red; */
 }
 
 .mall {
   display: flex;
   align-items: center;
+  width: 360px;
+  gap: 10px;
 }
-
-.mall > a {
-  color: var(--main);
-  margin-right: 20px;
+.mall .mall_img {
+  width: 28px;
+  height: 28px;
 }
-.lang {
-  height: 100%;
-}
-
-.lang a {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 50px;
-  height: 100%;
+.mall .mall_img img {
   width: 100%;
 }
+.mall > a {
+  color: var(--main);
+}
+/* language */
 
+.img_lang {
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+}
+
+.hd_lang {
+  display: flex;
+  align-items: center;
+  margin-right: 45px;
+  height: 100%;
+  width: 100%;
+  /* border: 1px solid red;
+  background-color: darksalmon; */
+}
+/* 구글 번역 api 커스텀 */
+.goog-te-gadget {
+  width: 130px;
+  height: 46px;
+  outline: 2px solid #fff;
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+/* 구글 번역 선택박스 */
+.goog-te-gadget-simple {
+  display: flex;
+  gap: 20px;
+  /* border: 1px solid #333; */
+}
+/* 언어 선택 박스 */
+.goog-te-combo {
+  width: 100px;
+  color: #000;
+  padding: 6px 3px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 10pt;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
+}
+.goog-te-gadget .VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  display: none;
+}
+
+.goog-te-gadget,
+.goog-te-gadget-simple {
+  border-style: none !important;
+}
+.goog-te-gadget-simple img {
+  display: none;
+}
+.goog-te-menu-value span:nth-of-type(1) {
+  margin-right: 1rem;
+}
+.goog-te-menu-value span[style^="border"] {
+  display: none;
+}
+
+.m_btn {
+  width: 18px;
+  height: 18px;
+}
 .m_btn a {
   display: flex;
   align-items: center;
 }
+
 /* site_map */
 
 .site_map {
@@ -319,29 +412,22 @@ nav > ul {
 
 .product-list .container {
   width: 1520px;
-  height: 2400px;
+  height: 3000px;
   background-color: var(--bg);
   margin: 0 auto;
   padding-top: 100px;
-  position: relative;
-  overflow: hidden;
+  /* position: relative; */
   /* background-color: rebeccapurple; */
 }
 
 .product-list .container .pro_ul {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 70px;
-  /* border: 5px solid #ccc; */
 }
 
 .product-list .container .pro_ul .pro-li {
   /* border: 1px solid red; */
-  width: 450px;
-  height: 663px;
-  margin-bottom: 30px;
 }
 
 .pro_ul .pro_li-1 > h3,
@@ -390,31 +476,38 @@ nav > ul {
 }
 
 .product .dial .numbers {
-  font-size: 20px;
   display: flex;
   justify-content: center;
-  gap: 40px;
-  cursor: pointer;
+  gap: 30px;
+  font-size: 14px;
 }
 .product .dial .numbers button {
-  color: var(--main);
+  color: #000;
   background-color: transparent;
   border: none;
 }
-.product .dial .numbers p {
-  width: 30px;
-  height: 30px;
-  text-align: center;
+.product .dial .numbers a {
+  margin-left: 28px;
+  margin-right: 26px;
+  color: #000;
 }
-
-.product .dial .numbers .left,
+.product .dial .numbers .leftMax {
+  margin-right: 26.5px;
+}
+.product .dial .numbers .left {
+  margin-right: 20px;
+  color: var(--main);
+  font-size: 16px;
+  font-weight: 700;
+}
 .product .dial .numbers .right {
+  margin-left: 20px;
+  color: var(--main);
+  font-size: 16px;
   font-weight: 700;
 }
-.product .dial .numbers .leftMax,
 .product .dial .numbers .rightMax {
-  font-weight: 700;
-  cursor: pointer;
+  margin-left: 26.5px;
 }
 
 /* footer */
