--- a/product/css/product-mobile.css
+++ b/product/css/product-mobile.css
@@ -1,32 +1,22 @@
 /* header */
-
 .header {
   height: 90px;
   display: flex;
   justify-content: space-between;
-  padding: 0 40px;
+  align-items: center;
+  padding: 0 20px;
   z-index: 1;
-  position: relative;
-}
-
-.header a {
-  color: #000;
 }
 
 /* header 좌측 로고 */
-
-.logo a img {
-  width: 152.57px;
-  height: 58px;
+.logo a {
+  width: 120px;
+  height: 22px;
+}
+.logo a > img {
+  width: 100%;
 }
 
-.logo {
-  height: 90px;
-  display: flex;
-  position: absolute;
-  left: 0;
-  top: 16px;
-}
 /* nav */
 .header_nav {
   display: none;
@@ -45,18 +35,17 @@
 .header_ui .between {
   display: none;
 }
-.lang {
+.img_lang {
+  display: none;
+}
+.hd_lang {
   display: none;
 }
 
 .m_btn a {
   display: flex;
   align-items: center;
-  position: absolute;
-  top: 42px;
-  right: 21px;
 }
-
 /* site-map */
 .site_map {
   display: none;
