--- a/main/css/index-pc.css
+++ b/main/css/index-pc.css
@@ -3,7 +3,7 @@ html {
   scroll-behavior: smooth;
 }
 
-#page-1 {
+#header-banner-wrap {
   height: 100vh;
   background-image: url(../images/main-visual\ 1.jpg);
   background-size: cover;
@@ -77,9 +77,6 @@ nav > ul {
   font-size: 16px;
 }
 
-.header_nav {
-  /* border: 2px solid salmon; */
-}
 .dep1_ul {
   height: 100%;
   display: flex;
@@ -293,6 +290,7 @@ nav > ul {
 }
 
 .site_map_dep1_li {
+  /* border: 1px solid red; */
   width: 30%;
   position: relative;
   padding-bottom: 10em;
@@ -310,6 +308,7 @@ nav > ul {
 .site_map_dep2_li {
   line-height: 2rem;
   margin-top: 20px;
+  /* border: 1px solid seagreen; */
 }
 
 .site_map_dep2_li > a {
@@ -373,8 +372,8 @@ nav > ul {
 .main_bn_title p > a {
   color: #fff;
 }
-.main_bn_title p:hover a {
-  transform: scaleX();
+.main_bn_title p:hover {
+  background-color: #ffffff21;
 }
 
 /* about */
@@ -421,12 +420,25 @@ nav > ul {
   font-size: 20px;
   padding: 10px 20px;
   width: 160px;
-  height: 60px;
-  /* margin-bottom: 100px; */
+  height: 50px;
 }
 
 .about .main_btn > a {
   color: var(--sub);
+}
+
+.about .main_btn:hover {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 160px;
+  height: 50px;
+  background-color: var(--main);
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.about .main_btn a:hover {
+  color: #fff;
 }
 
 /* product */
@@ -464,52 +476,62 @@ nav > ul {
 .product-parents {
   width: 1440px;
   height: 550px;
+  /* border: 2px solid red; */
   overflow: hidden;
 } /*부모 */
 .product-box {
   width: 2880px;
-  height: 750px;
+  height: 550px;
   display: flex;
   gap: 35px;
-  /* border: 1px solid red; */
 } /* 자식 */
 
-.product1,
-.product2 {
+.product1 {
   width: 450px;
   height: 550px;
   text-align: center;
-  /* border: 1px solid red; */
 }
-.product1 .product-img,
-.product2 .product-img {
+.product1 .product-img {
   width: 450px;
   height: 412px;
+  transition: 0.5s ease;
 }
-.product1 .product-img img,
-.product2 .product-img img {
+.product1 .product-img {
   width: 100%;
 }
-
-.product1 h3,
-.product2 h3 {
+.product1 .product-img:hover img {
+  transition: 0.5s ease;
+}
+.product1 h3 {
   font-size: 24px;
   font-weight: 700;
   margin: 10px;
 }
-.product1 p,
-.product2 p {
+.product1 p {
   font-size: 18px;
   font-weight: 400;
 }
-/* 이미지 표시 */
-.product-box .show {
-  z-index: 10;
-  opacity: 1;
+/* 이전/다음 버튼 클릭시 fade-in 효과주기  */
+@keyframes nextbtn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-/* 이미지 비표시 */
-.product-box .none {
-  display: none;
+@keyframes prebtn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.product-box .product1 {
+  z-index: 10;
+  transition: all 1s;
 }
 
 #pre-btn,
@@ -517,9 +539,10 @@ nav > ul {
   background-color: transparent;
   color: var(--sub);
   border: none;
+  cursor: pointer;
 }
 .product .main_btn {
-  outline: 1px solid var(--sub);
+  border: 1px solid var(--sub);
   font-size: 20px;
   display: flex;
   justify-content: center;
@@ -529,8 +552,21 @@ nav > ul {
   margin: 40px auto;
 }
 
-.main_btn > a {
+.product .main_btn > a {
   color: var(--sub);
+}
+.product .main_btn:hover {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 200px;
+  height: 60px;
+  background-color: var(--main);
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.product .main_btn a:hover {
+  color: #fff;
 }
 
 /* Ethical management */
@@ -576,11 +612,25 @@ nav > ul {
   align-items: center;
   justify-content: center;
   width: 160px;
-  height: 60px;
+  height: 50px;
 }
 
 .ethic .main-btn > a {
   color: var(--sub);
+}
+
+.ethic .main-btn:hover {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 160px;
+  height: 50px;
+  background-color: var(--main);
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.ethic .main-btn a:hover {
+  color: #fff;
 }
 
 /* Innovative Drug development */
@@ -629,10 +679,24 @@ nav > ul {
   align-items: center;
   justify-content: center;
   width: 160px;
-  height: 60px;
+  height: 50px;
 }
 
 .develop-box .main-btn > a {
+  color: #fff;
+}
+
+.develop-box .main-btn:hover {
+  border: 1px solid #fff;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 160px;
+  height: 50px;
+  background-color: #ffffff21;
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.develop-box .main-btn a:hover {
   color: #fff;
 }
 
@@ -685,11 +749,24 @@ nav > ul {
   align-items: center;
   justify-content: center;
   width: 160px;
-  height: 60px;
+  height: 50px;
 }
 
 .text-box .main-btn > a {
   color: var(--sub);
+}
+.text-box .main-btn:hover {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 160px;
+  height: 50px;
+  background-color: var(--main);
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.text-box .main-btn a:hover {
+  color: #fff;
 }
 
 /* recruit */
@@ -697,6 +774,8 @@ nav > ul {
 .recruit {
   height: 100vh;
   padding: 100px 0;
+  display: flex;
+  align-items: center;
 }
 .recruit .container {
   width: 1920px;
@@ -734,13 +813,25 @@ nav > ul {
   font-size: 20px;
   padding: 10px 20px;
   width: 160px;
-  height: 60px;
+  height: 50px;
 }
 
-.text-box .main-btn > a {
+.recruit .text-box .main-btn > a {
   color: var(--sub);
 }
-
+.recruit .text-box .main-btn:hover {
+  border: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  width: 160px;
+  height: 50px;
+  background-color: var(--main);
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.recruit .text-box .main-btn a:hover {
+  color: #fff;
+}
 /* footer */
 .footer {
   width: 100%;
