--- a/product/css/product-mobile.css
+++ b/product/css/product-mobile.css
@@ -74,9 +74,12 @@
   justify-content: space-between;
 }
 
-.site_map_logo a img {
-  width: 100x;
+.site_map_logo {
+  width: 100px;
   height: 40px;
+}
+.site_map_logo a img {
+  width: 100%;
 }
 
 /* site_map 하단*/
@@ -157,7 +160,7 @@
 /* container */
 
 .product .container {
-  width: 280px;
+  width: 300px;
   margin: 0 auto;
   /* background-color: #ccc; */
 }
@@ -228,11 +231,11 @@
   cursor: pointer;
 }
 .search-box .depth2 > .depth2_ul .depth2_li img {
-  width: 40%;
+  width: 30%;
 }
 .search-box .depth2 > .depth2_ul > .depth2_li > h3 {
   color: var(--sub);
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 5px;
 }
 
@@ -242,19 +245,25 @@
 }
 
 .product-list .container {
-  width: 280px;
-  height: 1600px;
+  width: 300px;
+  height: 840px;
   background-color: var(--bg);
   margin: 0 auto;
   padding: 50px 0;
+  overflow: hidden;
+  position: relative;
+  /* border: 1px solid darkblue; */
 }
 
 .product-list .container .pro_ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 20px;
+  /* border: 1px solid red; */
 }
 .product-list .container .pro_ul .pro-li {
+  width: 135px;
+  margin-bottom: 10px;
   /* border: 1px solid red; */
 }
 .pro_ul .pro_li-1 .pro-img,
@@ -286,7 +295,6 @@
 .pro_ul .pro_li-3 .pro_li_ul,
 .pro_ul .pro_li-4 .pro_li_ul {
   list-style-type: none;
-  /* margin-left: 2em; */
   margin-bottom: 30px;
 }
 .pro_li_ul .pro_li_li {
@@ -304,29 +312,33 @@
 .product .dial .numbers {
   display: flex;
   justify-content: center;
+  gap: 14px;
   font-size: 15px;
 }
 .product .dial .numbers button {
   color: #000;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
-.product .dial .numbers a {
-  margin-left: 10px;
-  margin-right: 10px;
-  color: #000;
+.pcP {
+  cursor: pointer;
 }
 .product .dial .numbers .leftMax {
   margin-right: 12px;
+  cursor: pointer;
 }
 .product .dial .numbers .left {
   margin-right: 10px;
+  cursor: pointer;
 }
 .product .dial .numbers .right {
   margin-left: 10px;
+  cursor: pointer;
 }
 .product .dial .numbers .rightMax {
   margin-left: 12px;
+  cursor: pointer;
 }
 
 /* footer */
